# RType-CI-CD

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  conanfile.txt  config_file  position.txt  rtype_server
.github/workflows/: build.yml  documentation.yml  mirror.yml
Document/: HOWTOCONTRIBUTE.md  README.md  RFC_Protocol.md  rfc.txt  rfcTCP.txt
Document/doc_generated/html/: Asio_8hpp.html  Asio_8hpp__dep__incl.dot  Asio_8hpp__incl.dot  Asio_8hpp_source.html  Client_2main_8cpp.html  Client_2main_8cpp.js  Client_2main_8cpp__incl.dot  Client_2main_8cpp_a0c99d968a34e803d378692bde2e3f18f_cgraph.dot  Clock_8hpp.html  Clock_8hpp.js  Clock_8hpp__dep__incl.dot  Clock_8hpp__incl.dot  Clock_8hpp_source.html  CrossPlatformSocket_8hpp.html  CrossPlatformSocket_8hpp__dep__incl.dot  CrossPlatformSocket_8hpp__incl.dot  CrossPlatformSocket_8hpp_source.html  Exception_8hpp.html  Exception_8hpp.js  Exception_8hpp__dep__incl.dot  Exception_8hpp__incl.dot  Exception_8hpp_source.html  GameState_8hpp.html  GameState_8hpp.js  GameState_8hpp__dep__incl.dot  GameState_8hpp__incl.dot  GameState_8hpp_source.html  Game_8cpp.html  Game_8cpp__incl.dot  Game_8hpp.html  Game_8hpp.js  Game_8hpp__dep__incl.dot  Game_8hpp__incl.dot  Game_8hpp_source.html  HOWTOCONTRIBUTE_8md.html  Packet_8hpp.html  Packet_8hpp.js  Packet_8hpp__dep__incl.dot  Packet_8hpp__incl.dot  Packet_8hpp_source.html  (+333 more)
Document/doc_generated/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+55 more)
ECS/: CMakeLists.txt
ECS/include/: Component.hpp  entity.hpp  registry.hpp  sparse_array.hpp  system.hpp
ECS/src/: main.cpp
Include/: Clock.hpp  CrossPlatformSocket.hpp  Exception.hpp
Include/Client/: Asio.hpp  ClientManager.hpp  ConfigManager.hpp  GameState.hpp  ParallaxLayer.hpp  Patterns.hpp  PlayerState.hpp  RTypeClient.hpp  Ray.hpp  Renderer.hpp  TCPClient.hpp  UDPClient.hpp  Windows.hpp
Include/Network/: INetworkHandler.hpp  ITCPHandler.hpp  Packet.hpp  RingBuffer.hpp
Include/Network/Protocole/: ProtocoleTCP.hpp  ProtocoleUDP.hpp
Include/Network/TCP/: TCPClient.hpp  TCPServer.hpp
Include/Network/UDP/: UDPClient.hpp  UDPServer.hpp
Include/Protocole/: ProtocoleTCP.hpp  ProtocoleUDP.hpp  UDPServer.hpp
Include/Server/: Game.hpp  INetworkHandler.hpp  ITCPHandler.hpp  Packet.hpp  ProtocoleUDP.hpp  RingBuffer.hpp  ServerManager.hpp  TCPServer.hpp  UDPServer.hpp  Utils.hpp
Src/Client/: CMakeLists.txt  ClientManager.cpp  ConfigManager.cpp  ParallaxLayer.cpp  PlayerState.cpp  RTypeClient.cpp  Renderer.cpp  TCPClient.cpp  UDPClient.cpp  main.cpp
Src/Network/: CMakeLists.txt  TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp
Src/Server/: CMakeLists.txt  Game.cpp  Network.hpp  ServerManager.cpp  TCPServer.cpp  UDPServer.cpp  main.cpp
doc/: README.md
src/server/: main.cpp
